corrected rightSideContainer
no scrollbars!

--- a/components/graph/graph.less
+++ b/components/graph/graph.less
@@ -17,7 +17,7 @@
 
   .nodeContainer {
     position: absolute;
-    
+
     .log {
       position: absolute;
       top: -43px;
@@ -52,7 +52,7 @@
 
       .logEntryBox > .panel-body {
         position: relative;
-        
+
         padding: 10px;
         margin-bottom: 0px;
         width: @log-width-small;
@@ -97,7 +97,7 @@
       position: absolute;
       margin-left: (@log-width-small + 40px);
       top: -21px;
-      width: 900px;
+      white-space: nowrap;
       height: 40px;
     }
 
@@ -203,7 +203,7 @@
         width: 150px;
       }
     }
-    
+
 
   }
 
